atualizações no estilo 1/3

--- a/index.html
+++ b/index.html
@@ -14,39 +14,39 @@
     <title>VLimpressões</title>
 </head>
 <body>
-    <header class="cabecalho">
-        <img class="cabecalho-imagem" src="imagens/logo_circle.png" alt="logo_empresa">
-        <nav class="cabecalho-menu">
-            <a class="cabecalho-menu-item" href="https://api.whatsapp.com/send?phone=5513991676105&text=ol%C3%A1,%20tudo%20bem?">Whatsapp <i class="fa fa-whatsapp" aria-hidden="true"></i></a>
-        </nav>
-    </header>
+    <div class="container">
+        <header class="cabecalho">
+            <img class="cabecalho-imagem" src="imagens/logo_circle.png" alt="logo_empresa">
+            <nav class="cabecalho-menu">
+                <a class="cabecalho-menu-item" href="https://api.whatsapp.com/send?phone=5513991324889&text=ol%C3%A1,%20gostaria%20de%20realizar%20um%20or%C3%A7amento%20ou%20servi%C3%A7o!">Whatsapp <i class="fa fa-whatsapp" aria-hidden="true"></i></a>
+            </nav>
+        </header>
 
-    <main class="conteudo">
-        <h1 class="conteudo-servico-titulo">SERVIÇOS</h1>
-        <section class="conteudo-servico">
-            <div class="conteudo-servico-impressao">
-                <img class="conteudo-servico-impressao-imagem" src="" alt="">
-                <h2 class="conteudo-servico-impressao-subtitulo">IMPRESSÃO E XEROX</h2>
-                <p class="conteudo-servico-impressao-paragrafo"><strong>PRETO E BRANCO:</strong> R$0,50<br><strong>COLORIDO:</strong> R$ 1,00</p>
-            </div>
-            <div class="conteudo-servico-foto">
-                <img class="conteudo-servico-foto-imagem" src="" alt="">
-                <h2 class="conteudo-servico-foto-subtitulo">FOTOS</h2>
-                <p class="conteudo-servico-foto-paragrafo"><strong>PRETO E BRANCO:</strong> R$3,50<br><strong>COLORIDO:</strong> R$ 4,00</p>
-            </div>
-            <div class="conteudo-servico-scaner">
-                <img class="conteudo-servico-scaner-imagem" src="" alt="">
-                <h2 class="conteudo-servico-scaner-subtitulo">SCANER</h2>
-                <p class="conteudo-servico-scaner-paragrafo"><strong>FOLHA:</strong> R$0,20</p>
-            </div>
-            <a href="https://api.whatsapp.com/send?phone=5513991324889&text=ol%C3%A1,%20gostaria%20de%20realizar%20um%20or%C3%A7amento%20ou%20servi%C3%A7o!"><span class="conteudo-servico-botao">SOLICITAR</span></a>
-        </section>
-    </main>
+        <main class="conteudo">
+            <h1 class="conteudo-servico-titulo">SERVIÇOS</h1>
+            <section class="conteudo-servico">
+                <div class="conteudo-servico-impressao">
+                    <img class="conteudo-servico-impressao-imagem" src="imagens/impressao.jpg" alt="">
+                    <h2 class="conteudo-servico-impressao-subtitulo">IMPRESSÃO E XEROX</h2>
+                    <p class="conteudo-servico-impressao-paragrafo"><strong>PRETO E BRANCO:</strong> R$0,50<br><strong>COLORIDO:</strong> R$ 1,00</p>
+                </div>
+                <div class="conteudo-servico-foto">
+                    <img class="conteudo-servico-foto-imagem" src="imagens/fotografia.png" alt="">
+                    <h2 class="conteudo-servico-foto-subtitulo">FOTOS</h2>
+                    <p class="conteudo-servico-foto-paragrafo"><strong>PRETO E BRANCO:</strong> R$3,50<br><strong>COLORIDO:</strong> R$ 4,00</p>
+                </div>
+                <div class="conteudo-servico-scaner">
+                    <img class="conteudo-servico-scaner-imagem" src="imagens/scaner.jpg" alt="">
+                    <h2 class="conteudo-servico-scaner-subtitulo">SCANER</h2>
+                    <p class="conteudo-servico-scaner-paragrafo"><strong>1 FOLHA:</strong>R$0,20<br><strong>10 FOLHAS:</strong>R$1,00 </p>
+                </div>
+            </section>
+        </main>
 
-    <footer>
-        <p class="rodape">&copy; VLimpressões - Site feito por <a href="https://www.instagram.com/viniciuscorreialourenco/">Vinicius Correia Lourenço</a></p>
-    </footer>
-
+        <footer>
+            <p class="rodape">&copy; VLimpressões - Site feito por <a href="https://www.instagram.com/viniciuscorreialourenco/">Vinicius Correia Lourenço</a></p>
+        </footer>
+    </div>
     <script src="js/acao.js"></script>
     <script src="https://kit.fontawesome.com/2ddc6f482c.js" crossorigin="anonymous"></script>
 </body>
