corrigindo erro de imagens

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <h1 class="conteudo-servico-titulo">SERVIÇOS</h1>
             <section class="conteudo-servico">
                 <div class="conteudo-servico-impressao">
-                    <img class="conteudo-servico-impressao-imagem" src="imagens/impressao.jpg" alt="">
+                    <img class="conteudo-servico-impressao-imagem" src="imagens/impressao.png" alt="">
                     <h2 class="conteudo-servico-impressao-subtitulo">IMPRESSÃO E XEROX</h2>
                     <p class="conteudo-servico-impressao-paragrafo"><strong>PRETO E BRANCO:</strong> R$0,50<br><strong>COLORIDO:</strong> R$ 1,00</p>
                 </div>
@@ -36,7 +36,7 @@
                     <p class="conteudo-servico-foto-paragrafo"><strong>PRETO E BRANCO:</strong> R$3,50<br><strong>COLORIDO:</strong> R$ 4,00</p>
                 </div>
                 <div class="conteudo-servico-scaner">
-                    <img class="conteudo-servico-scaner-imagem" src="imagens/scaner.jpg" alt="">
+                    <img class="conteudo-servico-scaner-imagem" src="imagens/scaner.png" alt="">
                     <h2 class="conteudo-servico-scaner-subtitulo">SCANER</h2>
                     <p class="conteudo-servico-scaner-paragrafo"><strong>1 FOLHA:</strong>R$0,20<br><strong>10 FOLHAS:</strong>R$1,00 </p>
                 </div>
